# semester_4

./: README.md
N_5/: CMakeLists.txt  Source.cpp  conf.txt
N_5 2/: Source.cpp  bmplib.hpp  conf.txt
igor/: AutoTest.h  CMakeLists.txt  CString.cpp  CString.h  CString0.cpp  CString1.cpp
igor (1)/: AutoTest.h  CString.cpp  CString0.cpp  CString0.h  input.txt
igor/igor (1)/: CString.h  CString1.cpp  CString1.h  main.cpp
igor2/: AutoTest.h  CMakeLists.txt  CString.cpp  CString.h  CString0.cpp  CString1.cpp  CString1.h  Creator.cpp  main.cpp
igor3/: CMakeLists.txt  CString.cpp  CString0.h
igor3(1)/: AutoTest.h  CString.h  CString0.cpp  CString1.cpp  Creator.h  input.txt  main.cpp
problem4igor (1)/: main.py
test/: CString0.h  CString1.h  main.cpp
